--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <resources>
     <string name="app_name">DesignIt</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Bottom menu -->
+    <string name="mi_home_name">Home</string>
+    <string name="mi_classes_name">Classes</string>
+    <string name="mi_list_name">List</string>
+    <string name="mi_fav_name">Fav</string>
+
+    <!-- Top menu -->
+    <string name="mi_search_name">Search</string>
+    <string name="mi_filter_name">Filter</string>
+    <string name="mi_profile_name">Profile</string>
+    <string name="id_for_toptext">tv_text_top</string>
+
+    <!-- Default Text -->
+    <string name="hi_name_string">Hi, User!</string>
+
 </resources>
