--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
 
     <!-- Classes Section -->
     <string name="classes_title_text">Classes</string>
+    <string name="button_skype_text">S\nk\ny\np\ne</string>
 
 </resources>
